fix: use older List methods